[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensio-lib"
version = "0.1.0"
description = ""
authors = [{ name = "MariusLindberg", email = "Marius.Lindberg@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "pytest>=8.3.3,<9",
]
